--- a/WChat/Info.plist
+++ b/WChat/Info.plist
@@ -16,10 +16,40 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.175912741429-8bcca8a0ci6p4spvcjv8j3u9vir1i03n</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Wchat needs to access your pictures</string>
+	<key>NSCameraUsageDescription</key>
+	<string>WChat needs to access your camera</string>
+	<key>NSContactsUsageDescription</key>
+	<string>WChat needs to use your contacts</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>WChat needs to user your location</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Wchat needs to use microphone</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Wchat needs to access your pictures</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>fetch</string>
+		<string>remote-notification</string>
+		<string>voip</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -40,23 +70,6 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>WChat needs to access your camera</string>
-	<key>NSAppleMusicUsageDescription</key>
-	<string>Wchat needs to access your pictures</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Wchat needs to access your pictures</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Wchat needs to use microphone</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>WChat needs to user your location</string>
-	<key>NSContactsUsageDescription</key>
-	<string>WChat needs to use your contacts</string>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>remote-notification</string>
-		<string>voip</string>
 	</array>
 </dict>
 </plist>
