tried to add Saving to photo album

--- a/WChat/Info.plist
+++ b/WChat/Info.plist
@@ -71,5 +71,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>WChat would like to save images to photo library</string>
 </dict>
 </plist>
